test/classes/errors/nilability-init-field-dflt/init-field-dflt-nonnil-owned-from-oknil-borrowed.good
init-field-dflt-nonnil-owned-from-oknil-borrowed.chpl:11: error: cannot initialize 'owned MyClass' from a 'borrowed MyClass?'
